--- a/discography.html
+++ b/discography.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discography</title>
-    <link rel="icon" href="./images/nic.jpg" />
+    <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
 <body>
@@ -19,14 +19,14 @@
 
     <table>
         <tr>
-            <th><img height="200" src="./images/feed.jpg" /></th>
-            <th><img height="200" src="./images/nofixed.jpg" /></th>
-            <th><img height="200" src="./images/here.jpg" /></th>
+            <th><img height="250" src="./images/feed.jpg" /></th>
+            <th><img height="250" src="./images/nofixed.jpg" /></th>
+            <th><img height="250" src="./images/here.jpg" /></th>
         </tr>
-        <tr>
-            <td><strong>Feed the Machine (2017)</strong></td>
-            <td><strong>No Fixed Address (2014)</strong></td>
-            <td><strong>Here and Now (2011)</strong></td>
+        <tr class="table-padding">
+            <td><u>Feed the Machine (2017)</u></td>
+            <td><u>No Fixed Address (2014)</u></td>
+            <td><u>Here and Now (2011)</u></td>
         </tr>
         <tr>
             <td>1. Feed the Machine</td>
