--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nickelback is Back</title>
-    <link rel="icon" href="./images/nic.jpg" />
+    <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
 <body>
     <h1><u>Nickel</u> is <u>Back</u></h1>
     <nav>
-        <p>| <strong>Homepage</strong> | <a href="./discography.html">Discography</a> | <a href="./bio.html">Bio</a>  | </p>
+        <p>| <strong>Homepage</strong> | <a href="./discography.html">Discography</a> | <a href="./bio.html">Bio</a> | </p>
     </nav>
+    
+    <img class="nickel" src="./images/nickelback.png" alt="band cover">
 
 
-    <img src="./images/band.jpg" />
+    
     <br />
     <br />
     <p>Nickelback is a Canadian rock band formed in 1995 in Hanna, Alberta. It is composed of guitarist and lead
@@ -31,7 +33,7 @@
         heavy metal, alternative metal, and nu metal. Their earlier sound has been classified as grunge.</p>
 
     <br />
-
+    <img src="./images/band.jpg" />
     <footer>
         <p>Elise Hall Enterprises&copy; Copyright 2022. All Rights Reserved.</p>
     </footer>
