Fixed table styling, also changed icon method.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nickelback is Back</title>
+    <link rel="icon" href="./images/nic.png" />
     <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
@@ -14,7 +15,7 @@
     <nav>
         <p>| <strong>Homepage</strong> | <a href="./discography.html">Discography</a> | <a href="./bio.html">Bio</a> | </p>
     </nav>
-    
+
     <img class="nickel" src="./images/nickelback.png" alt="band cover">
 
 
