--- a/discography.html
+++ b/discography.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discography</title>
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="icon" href="./images/nic.png" />
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     </nav>
 
     <br />
-
+<div class="table-container">
     <table>
         <tr>
             <th><img height="250" src="./images/feed.jpg" /></th>
@@ -84,7 +85,7 @@
             <td>11. Don't Ever Let It End</td>
         </tr>
     </table>
-
+</div>
     <br />
 
     <footer>
